--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -11,48 +11,85 @@ body {
 }
 
 .my-form-users {
+  .el-form--inline .el-form-item{
+    margin-right: 18px;
+  }
+  .el-form-item {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .el-form-item__content{
+      line-height: 28px;
+      .el-input{
+        width: 120px;
+        line-height: 28px;
+        .el-input__inner{
+          line-height: 28px;
+          height: 28px;
+        }
+      }
+      .el-input--suffix{
+        .el-input__inner{
+          height: 28px;
+          line-height: 28px;;
+          width: 120px;
+        }
+        .el-input__suffix-inner{
+          .el-input__icon {
+            line-height: 28px;
+          }
+        }
+      }
+    }
+  }
+
   .el-form-item__label {
     line-height: 28px;
   }
-
-  .el-form-item__content {
-    height: 28px;
-    line-height: 28px;
-    .el-input__inner {
-      height: 28px;
-      line-height: 28px;
-    }
-    .el-col {
-      height: 28px;
-      width: 120px;
-      .el-input {
-        height: 28px;
-        line-height: 28px;
-        .el-input__inner {
-          height: 28px;
-          line-height: 28px;
-        }
-
-        .el-input__prefix {
-          height: 28px;
-          .el-input__icon {
-            height: 28px;
-            line-height: 28px;
-          }
-        }
-        .el-input__suffix-inner{
-          .el-input__inner{
-            padding-right: 0;
-          }
-          .el-input__icon {
-            height: 28px;
-            line-height: 28px;
-          }
-        }
+}
   
+  
+
+
+.login-form {
+  width: 400px;
+  height: 280px;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: 0px 4px 20px 0px rgba(24, 33, 43, 0.38);
+  box-sizing: border-box;
+  padding: 60px 32px 40px 32px;
+
+  .el-form-item {
+    margin-bottom: 30px;
+    line-height: 36px;
+
+    .el-form-item__label {
+      line-height: 36px;
+      font-size: 16px;
+      color: #304156;
+    }
+
+    .el-form-item__content {
+      line-height: 26px;
+
+      .el-input {
+        width: 242px;
+
+        .el-input__inner {
+          height: 36px;
+          line-height: 26px;
+        }
       }
     }
+  }
 
-   
+  .login-btn {
+    width: 100%;
+    height: 48px;
+    background-color: #419EFF;
+    font-size: 16px;
+    margin-left: 0;
   }
 }
