--- a/src/assets/less/base.css
+++ b/src/assets/less/base.css
@@ -8,6 +8,28 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+.my-tab /deep/ .el-tabs__item {
+  width: 120px !important;
+  height: 49px;
+  line-height: 49px;
+  color: #979dac;
+  padding-left: 20px;
+  text-align: center;
+}
+.my-tab-big /deep/ .el-tabs__item {
+  width: 216px !important;
+  height: 49px;
+  line-height: 49px;
+  color: #979dac;
+  padding-left: 20px;
+  text-align: center;
+}
+.my-form-users /deep/ .el-input__prefix {
+  display: none;
+}
+.my-form-users /deep/ .el-input--prefix .el-input__inner {
+  padding-left: 10px !important;
+}
 .my-form-users .el-form--inline .el-form-item {
   margin-right: 18px;
 }
