--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -19,7 +19,17 @@ body {
     padding-left: 20px;
     text-align: center;
   }
-
+  .el-cascader{
+    .el-input__inner{
+      width: 120px;
+      height: 28px;
+      line-height: 28px;
+    }
+    .el-input__icon {
+      line-height: 28px;
+    }
+    
+  }
 }
 .my-tab-big {
   /deep/ .el-tabs__item {
@@ -229,4 +239,8 @@ body {
     font-size: 16px;
     margin-left: 0;
   }
+}
+.el-menu-item:focus,.el-menu-item:hover{
+  outline: none;
+  background-color: white;
 }
