--- a/src/assets/less/base.css
+++ b/src/assets/less/base.css
@@ -183,3 +183,16 @@ body {
   outline: none;
   background-color: white;
 }
+.el-icon {
+  display: inline-block;
+  width: 14px;
+  height: 16px;
+  background: url('../../assets/images/white.png') center / 100% no-repeat;
+  margin-right: 16px;
+}
+.el-icon-active {
+  background: url('../../assets/images/blue.png') center / 100% no-repeat !important;
+}
+.el-text-active {
+  color: #419EFF !important;
+}
